Removes using sql files as template string, fully tests DAO

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -146,7 +146,7 @@
         "no-process-env": "error",
         "no-process-exit": "error",
         "no-restricted-modules": "error",
-        "no-sync": "error",
+        "no-sync": "off",
         "array-bracket-newline": "error",
         "array-bracket-spacing": "error",
         "array-element-newline": "error",
